cleaned up styling of buttons

--- a/homework/week-3/css/stylesheet.css
+++ b/homework/week-3/css/stylesheet.css
@@ -45,9 +45,9 @@ header a {
 
 .button {
   border: 1px solid blue;
-  border-radius: 3px;
-  padding: 5px;
-  margin: 5px;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  margin: 2px;
   font-family: Arial;
   font-size: 1em;
   background-color: white;
@@ -55,11 +55,6 @@ header a {
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
-}
-
-.button:hover {
-  background-color: yellow;
-  border-color: orange;
 }
 
 .button-signup {
@@ -81,11 +76,6 @@ header a {
 .button-add-to-cart {
   color: white;
   background-color: rgb(0, 0, 255);
-}
-
-.button-primary:hover {
-  border-color: red;
-  color: red;
 }
 
 body {
@@ -120,11 +110,15 @@ on each page.
 }
 
 /*
-Defines the layout of each product listing
+Each product listing is in a flex-container.
+Within each container, the image is one flex-item
+and the description plus buttons is another flex-item.
 */
 .product-listing-flex-container {
   display: flex;
-  margin-top: 1em;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 1.5em auto auto 1.5em;
 }
 
 .product-item-image {
@@ -136,7 +130,7 @@ Defines the layout of each product listing
 }
 
 .product-item-description p {
-  margin-top: 0;
+  margin: 0 auto 1em auto;
 }
 
 footer {
