--- a/homework/week-3/css/stylesheet.css
+++ b/homework/week-3/css/stylesheet.css
@@ -46,8 +46,8 @@ header a {
 .button {
   border: 1px solid blue;
   border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  margin: 2px;
+  padding: 3px 10px 3px 10px;
+  margin-right: 1px;
   font-family: Arial;
   font-size: 1em;
   background-color: white;
@@ -62,7 +62,6 @@ header a {
   text-shadow: 1px 1px 2px #666666;
   font-family: "Lucida Sans", sans-serif;
   color: #ffffff;
-  font-size: 1em;
   background: #2755B0;
   padding: 10px 20px 10px 20px;
   border: solid #6b6b6b 1px;
@@ -119,14 +118,17 @@ and the description plus buttons is another flex-item.
   flex-direction: row;
   flex-wrap: wrap;
   margin: 1.5em auto auto 1.5em;
+  justify-content: flex-start;
 }
 
 .product-item-image {
-  flex: 2;
+  flex-basis: 200px;
+  margin-bottom: 10px;
 }
 
 .product-item-description {
-  flex: 3;
+  flex: 200px;
+  margin-left: 20px;
 }
 
 .product-item-description p {
